--- a/SkyOS/Jenkinsfile
+++ b/SkyOS/Jenkinsfile
@@ -2,17 +2,24 @@ pipeline {
   agent any
 
   stages {
+    stage('Cleanup previous runs') {
+      steps {
+        sh('''#!/bin/bash -e
+          rm -rf repo/
+        ''')
+      }
+    }
     stage('Check Fedora versions') {
       steps {
         echo 'Fetching all numeric Fedora versions...'
-        sh('''#!/bin/bash
+        sh('''#!/bin/bash -e
           curl -s https://pdc.fedoraproject.org/rest_api/v1/product-versions/ | jq -r '.results[].version' | grep -P '^\\d+$' | uniq | tee upstream-releases.txt
         ''')
       }
     }
     stage('Check SkyOS versions') {
       steps {
-        sh('''#!/bin/bash
+        sh('''#!/bin/bash -e
           git clone https://github.com/skylerspaeth/SkyOS.git repo/
           cd repo/
           git tag -l | tee ../skyos-releases.txt
@@ -21,7 +28,7 @@ pipeline {
     }
     stage('Detect new versions') {
       steps {
-        sh('''#!/bin/bash
+        sh('''#!/bin/bash -e
           diff upstream-releases.txt skyos-releases.txt | grep '^<' > new-versions.txt
           if [[ $(wc -l new-versions.txt) -gt 0 ]]; then
             echo "New Fedora versions are available to build SkyOS for:"
