--- a/SkyOS/Jenkinsfile
+++ b/SkyOS/Jenkinsfile
@@ -30,7 +30,7 @@ pipeline {
       steps {
         sh('''#!/bin/bash -e
           diff upstream-releases.txt skyos-releases.txt | grep '^<' > new-versions.txt
-          if [[ "$(wc -l new-versions.txt)" -gt 0 ]]; then
+          if [[ "$(wc -l < new-versions.txt)" -gt 0 ]]; then
             echo "New Fedora versions are available to build SkyOS for:"
             cat new-versions.txt
           fi
