--- a/SkyOS/Jenkinsfile
+++ b/SkyOS/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
       steps {
         sh('''#!/bin/bash -e
           rm -rf repo/
-          rm new-versions.txt upstream-releases.txt skyos-releases.txt
+          rm -f new-releases.txt upstream-releases.txt skyos-releases.txt
         ''')
       }
     }
@@ -31,10 +31,10 @@ pipeline {
     stage('Detect new versions') {
       steps {
         sh('''#!/bin/bash -e
-          diff upstream-releases.txt skyos-releases.txt | grep '^<' | cut -d' ' -f2 > new-versions.txt
-          if [[ $(wc -l < new-versions.txt) -gt 0 ]]; then
+          diff upstream-releases.txt skyos-releases.txt | grep '^<' | cut -d' ' -f2 > new-releases.txt
+          if [[ $(wc -l < new-releases.txt) -gt 0 ]]; then
             echo "New Fedora versions are available to build SkyOS for:"
-            cat new-versions.txt
+            cat new-releases.txt
           fi
         ''')
       }
